--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Nav */
+
 .navbar{
     height: 110px;
     display: flex;
@@ -30,4 +32,10 @@
     height: 100px;
     width: 100px;
     margin:10px;
+}
+
+/* Header */
+
+h1{
+    margin: 20px;
 }
