--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items:center;
+    background-color: orange;
 }
 
 .navbar div{
@@ -34,12 +35,28 @@
     margin:10px;
 }
 
-/* Header */
+/* Header Index*/
+
 
 h1{
     margin: 20px;
-}
+    text-align: center;
+} 
 
 .header-index{
-    align-items: center;
+    background-color: orange;
 }
+
+/* footer */
+
+footer{
+    background-color: orange;
+    align-items: center;
+    text-align: center;
+}
+
+.img-footer{
+    width: 50px;
+    height: 50px;
+}
+
