--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1 {
 }
 .h1{
     background-color: orange;
-    margin: 0 0 0 0;
+    color: white;
 }
 
 .header-index {
@@ -139,6 +139,22 @@ h1 {
 .grilla aside img {
     width: 560px;
     height: 200px;
+}
+
+/* All Valley */
+
+.main-all-valley{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: orange;
+    margin-top: 75px;
+    margin-bottom: 75px;
+}
+
+.videos video{
+    height: 100px;
+    width: 200px;
 }
 
 /* footer */
