--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,74 @@ h1 {
 }
 
 .campeones-all-valley{
-    background-color: orange;
+    display: flex;
 }
+
+.li-lawrence{
+    background-color: black;
+    border: 4px solid yellow;
+    width: 275px;
+    color: yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.li-larusso{
+    border: 4px solid orange;
+    color: orange;
+    width: 275px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.li-xander{
+    background-color: blue;
+    border: 4px solid red;
+    width: 275px;
+    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.li-diaz{
+    background-color: black;
+    border: 4px solid yellow;
+    width: 275px;
+    color: yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.li-hawk{
+    border: 4px solid orange;
+    color: orange;
+    width: 275px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.li-nichols{
+    background-color: black;
+    border: 4px solid yellow;
+    width: 275px;
+    color: yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+
 
 /* footer */
 
