--- a/css/style.css
+++ b/css/style.css
@@ -251,14 +251,23 @@ h1 {
     background-color: green;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    margin: 15px;
+    /* margin: 15px; */
     padding: 15px;
     justify-content: center;
+    text-align: center;
+}
+
+.grilla-personajes section{
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-bottom: 200px;
+    margin-left: 15px;
 }
 
 .grilla-personajes img{
-   width: 80px;
-   height: 80px;
+   width: 100px;
+   height: 100px;
+   margin-top: 13px;
 }
 
 .eagle-fang-theme{
