--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,40 @@ h1 {
     list-style: none;
 }
 
+/* Rivalidades */
+
+.main-rivalidades{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-rivalidades-grilla{
+    background-color: green;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    padding: 30px;
+    justify-content: center;
+    text-align: center;
+}
+
+.main-grilla-rivalidades section{
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-bottom: 200px;
+    margin-left: 15px;
+}
+
+.main-rivalidades-grilla img{
+    height: 100px;
+    width: 200px;
+    
+}
+
+h4{
+    color: black;
+    font-size: 16px;
+}
 
 /* footer */
 
