--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+@font-face {
+    font-family: "barak";
+    src: url(../recursos-img/BELARAK.ttf);
+}
 * {
     margin: 0;
     padding: 0;
+}
+
+h1{
+    font-family:barak;
 }
 
 /* Nav */
