--- a/css/style.css
+++ b/css/style.css
@@ -444,3 +444,12 @@ footer {
     width: 50px;
     height: 50px;
 }
+
+/* Media queri */
+
+@media (min-width:480px ){
+    .grilla-personajes{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
