--- a/css/style.css
+++ b/css/style.css
@@ -447,9 +447,9 @@ footer {
 
 /* Media queri */
 
-@media (min-width:480px ){
-    .grilla-personajes{
+@media (max-width:480px){
+    .main-personajes{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 }
