--- a/css/style.css
+++ b/css/style.css
@@ -256,13 +256,14 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .grilla-personajes {
     background-color: green;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    /* grid-template-columns: 20% 20% 20% 20% 20%; */
+    /* grid-template-columns: repeat(5,1fr); */
+    grid-template-columns: 20% 20% 20% 20% 20%;
     /* margin: 15px; */
     padding: 15px;
     justify-content: center;
@@ -270,6 +271,13 @@ h1 {
 }
 
 .grilla-personajes section {
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-bottom: 200px;
+    margin-left: 15px;
+}
+
+.grilla-personajes div{
     margin-top: 15px;
     margin-right: 15px;
     margin-bottom: 200px;
@@ -453,9 +461,11 @@ footer {
 
 @media (max-width:767){
     .grilla-personajes{
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2,1fr);
     }
 }
+
+
 
 /* @media (max-width:400px){
     .navbar ul{
