--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,7 @@ footer {
 
 @media (max-width:767){
     .grilla-personajes{
-        grid-template-columns: repeat(2,1fr);
+        display: inline-block;
     }
 }
 
