--- a/css/style.css
+++ b/css/style.css
@@ -275,14 +275,17 @@ h1 {
     margin-right: 15px;
     margin-bottom: 200px;
     margin-left: 15px;
+    /* espacio */
+    width: 200px;
+    height: 250px;
 }
 
-.grilla-personajes div{
+/* .grilla-personajes div{
     margin-top: 15px;
     margin-right: 15px;
     margin-bottom: 200px;
     margin-left: 15px;
-}
+} */
 
 .grilla-personajes img {
     width: 100px;
@@ -460,6 +463,12 @@ footer {
 /* Media queri */
 
 @media (max-width:767){
+    .grilla-personajes{
+        display: inline-block;
+    }
+}
+
+@media (min-width:768){
     .grilla-personajes{
         display: inline-block;
     }
