--- a/css/style.css
+++ b/css/style.css
@@ -443,36 +443,24 @@ h1 {
 /* Rivalidades */
 
 .main-rivalidades {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
 }
 
-.main-rivalidades-grilla {
-    background-color: green;
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    padding: 30px;
-    justify-content: center;
-    text-align: center;
+.main-rivalidades-grilla section {
+    background-color: #f2f2f2;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
-.main-grilla-rivalidades section {
-    margin-top: 15px;
-    margin-right: 15px;
-    margin-bottom: 200px;
-    margin-left: 15px;
-}
-
-.main-rivalidades-grilla img {
-    height: 100px;
-    width: 200px;
-
-}
-
-h4 {
-    color: black;
-    font-size: 16px;
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Centra la imagen */
 }
 
 /* footer */
@@ -517,3 +505,16 @@ footer {
 }
 
 /* Rivalidades */
+
+@media (min-width: 768px) {
+    .main-rivalidades-grilla {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .main-rivalidades-grilla section {
+        width: 48%; /* Dos columnas en pantallas más grandes */
+        box-sizing: border-box;
+    }
+}
