--- a/css/style.css
+++ b/css/style.css
@@ -528,9 +528,16 @@ footer {
 /* Rivalidades */
 /* Dojos */
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
+    .main-dojos {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     .main-dojos section {
-      width: 48%;
+      width: 90%;
+      max-width: 1250px; /* Ancho máximo en la vista móvil */
     }
   }
 
