--- a/css/style.css
+++ b/css/style.css
@@ -542,4 +542,26 @@ footer {
   }
 
 /* Dojos */
+/* Torneo */
+
+@media (max-width: 767px) {
+    .main-all-valley {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .img-all-valley,
+    .videos,
+    .div-torneo {
+        width: 90%;
+        margin-bottom: 15px;
+    }
+
+    .campeones-all-valley li {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+}
+
+/* Torneo */
 
