--- a/css/style.css
+++ b/css/style.css
@@ -564,4 +564,30 @@ footer {
 }
 
 /* Torneo */
+/* Index */
+@media (max-width: 767px) {
+    .img-principal-index img {
+      width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
+      height: auto; /* Ajusta la altura de la imagen automáticamente */
+      overflow: hidden; /* Aplica overflow hidden */
+    }
+  }
+
+  @media (max-width: 767px) {
+    .grilla {
+      display: grid;
+      grid-template-columns: 1fr 1fr; /* Dos columnas */
+      grid-template-rows: repeat(3, auto); /* Tres filas */
+      gap: 10px; /* Espaciado entre las imágenes */
+    }
+  
+    .grilla header,
+    .grilla section,
+    .grilla article,
+    .grilla aside {
+      width: 100%; /* Ajustar ancho al 100% del contenedor */
+      height: auto; /* Ajustar altura automáticamente */
+    }
+  }
+/* Index */
 
